# stodo

./: .gitignore  Cargo.toml  README  README.md  todo.txt
src/: cli.rs  core.rs  display.rs  main.rs  stodo_forest.rs  stodo_items.rs  stodo_tree.rs
src/cli/: clap_args.rs  mod.rs  stodo_args.rs  term.rs
src/core/: dir.rs  entry.rs  file.rs  worker_pool.rs
src/display/: builder.rs  display_tree.rs  displayable.rs  forest.rs  forest_view.rs  gutter.rs  mod.rs  print_tree.rs  viewable.rs
src/display/builder/: gutter.rs
src/display/display_tree/: builder.rs  forest.rs  gutter.rs
src/stodo_forest/: stodo.rs  stodo_dir.rs
src/stodo_items/: stodo.rs  stodo_dir.rs
src/stodo_tree/: stodo.rs  stodo_dir.rs
