[package]
name = "stodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"
regex = "1.5.5"
petgraph = "0.6.0"
crossterm = "0.23"
termtree = "0.4.0"
termcolor = "1.1.3"
lazy_static = "1.4.0"
ignore = "0.4.18"
ansi_term = "0.12"